# ingenia

./: .context.md  .editorconfig  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  init.sh
backend/: .gitignore  CLAUDE.md  pyproject.toml
backend/src/accounts/: .context.md  CLAUDE.md  admin.py  apps.py  enums.py  models.py  schemas.py  selectors.py  serializers.py  urls.py  views.py
backend/src/accounts/migrations/: 0001_initial.py  0002_adminprofile_studentprofile_teacherprofile_and_more.py  0003_passwordresettoken.py  0004_remove_user_username.py
backend/src/accounts/services/: auth.py  password_reset.py  user_admin.py
backend/src/ai/: CLAUDE.md  admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/src/ai/providers/: base.py  (+3 more)
backend/src/classes/: .context.md  CLAUDE.md  admin.py  apps.py  enums.py  models.py  schemas.py  selectors.py  serializers.py  urls.py  views.py
backend/src/config/: .context.md  asgi.py  celery.py  urls.py  wsgi.py
backend/src/core/: .context.md  CLAUDE.md  errors.py  pagination.py  permissions.py  serializers.py  testing.py
backend/src/curriculum/: .context.md  CLAUDE.md  admin.py  apps.py  enums.py  models.py  schemas.py  selectors.py  serializers.py  urls.py  views.py
backend/src/progress/: .context.md  admin.py  apps.py  enums.py  models.py  schemas.py  selectors.py  serializers.py  urls.py  views.py
backend/src/submissions/: .context.md  CLAUDE.md  admin.py  apps.py  enums.py  models.py  schemas.py  selectors.py  serializers.py  urls.py  views.py
(+352 files in other folders)
