[project]
name = "ingenia-backend"
version = "0.1.0"
description = "ingenia Backend — Django + DRF"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.3",
    "psycopg[binary]>=3.2",
    "python-decouple>=3.8",
    "drf-spectacular>=0.27",
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "tenacity>=8.5",
    "jsonschema>=4.23",
    "openai>=1.40",
    "django-filter>=25.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "faker>=33.0",
    "ruff>=0.8",
    "coverage>=7.6",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "accounts", "ai"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
python_classes = ["*Test", "Test*"]
python_functions = ["test_*"]
testpaths = ["src"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/migrations/*", "manage.py"]
